k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dxc-dashboard-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.68-221-185-190.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dxc-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dxc-frontend-service
                port:
                  number: 80
